<resources>
    <string name="app_name">Filma</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="movies_list">List of movies</string>
    <string name="movie_details">Movie details</string>
    <string name="example_movie_title">Inception</string>
    <string name="rating_header">Rating:</string>
    <string name="example_rating">7.5</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Try again</string>
    <string name="close">Close</string>
    <string name="details_year_header">Year:</string>
    <string name="details_type_header">Type:</string>
    <string name="details_release_date_header">Release date:</string>
    <string name="details_runtime_header">Runtime:</string>
    <string name="details_genre_header">Genre:</string>
    <string name="example_movie_year">2010</string>
    <string name="example_movie_type">Movie</string>
    <string name="example_movie_genre">Thriller</string>
    <string name="example_movie_release_date">25.01.2010</string>
    <string name="example_movie_runtime">1:25:05</string>
    <string name="movie_plot_header_text">Plot of the film:</string>
    <string name="example_movie_plot">A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O., but his tragic past may doom the project and his team to disaster.</string>
    <string name="movie_actors_header_text">Actors:</string>
    <string name="example_actor_text">Michael Caine</string>
    <string name="asCharacter">as</string>
    <string name="example_character_text">Miles</string>
    <string name="movie_directors_header_text">Film directors:</string>
    <string name="example_movie_director">Christopher Nolan</string>
</resources>