<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recycler_item_height"
    android:layout_margin="@dimen/margin_4"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movie_image"
            android:layout_width="@dimen/movie_image_width_size"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/example_movie_image" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:textIsSelectable="true"
            android:textSize="@dimen/recycler_item_movie_title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/example_movie_title" />

        <TextView
            android:id="@+id/imDbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:textSize="@dimen/recycler_item_imdbRating_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/example_rating" />

        <TextView
            android:id="@+id/rating_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4"
            android:text="@string/rating_header"
            android:textSize="@dimen/recycler_item_imdbRating_text_size"
            app:layout_constraintBottom_toBottomOf="@id/imDbRating"
            app:layout_constraintEnd_toStartOf="@id/imDbRating"
            app:layout_constraintTop_toTopOf="@id/imDbRating" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/imdb_image_width"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin_4"
            android:src="@drawable/ic_imdb"
            app:layout_constraintBottom_toBottomOf="@+id/imDbRating"
            app:layout_constraintEnd_toStartOf="@+id/rating_header"
            app:layout_constraintTop_toTopOf="@+id/imDbRating" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>